--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "okta/sdk",
+    "name": "pubpackage/okta-sdk-php",
     "description": "PHP Wrapper for the Okta API",
     "type": "library",
     "license": "Apache-2.0",
@@ -19,19 +19,18 @@
         "php-http/curl-client": "^1.7",
         "symfony/yaml": "^3.2|^4.3",
         "nesbot/carbon": "^2.0",
-        "tightenco/collect": "5.8.31",
         "guzzlehttp/psr7": "^1.4",
         "psr/cache": "^1.0",
         "league/flysystem-memory": "^1.0",
         "cache/filesystem-adapter": "^1.0",
-        "vlucas/phpdotenv": "^3.3|^4.1",
-        "lcobucci/jwt": "^4.0@alpha"
+        "lcobucci/jwt": "^4.0@alpha",
+        "illuminate/collections": "^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
         "squizlabs/php_codesniffer": "3.*",
-        "symfony/var-dumper": "^4.3",
-        "php-http/mock-client": "^1.0"
+        "php-http/mock-client": "^1.0",
+        "vlucas/phpdotenv": "^3.3|^4.1|^5.2"
     },
     "autoload": {
         "psr-4": {
