--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "php-http/message": "^1.5",
         "php-http/discovery": "^1.2",
         "php-http/curl-client": "^1.7",
-        "symfony/yaml": "^3.2|^4.3",
+        "symfony/yaml": "^3.2|^4.3|^5.2",
         "nesbot/carbon": "^2.0",
         "guzzlehttp/psr7": "^1.4",
         "psr/cache": "^1.0",
